@@ -85,14 +85,12 @@ public class LegacyGraphQLPatternImpl implements LegacyGraphQLDataFetchers.Legac
                       .stream()
                       .anyMatch(entity ->
                         (
-                          entity instanceof EntitySelector.StopAndRoute &&
-                          ((EntitySelector.StopAndRoute) entity).stopAndRoute.routeOrTrip.equals(
-                              getRoute(environment).getId()
-                            )
+                          entity instanceof EntitySelector.StopAndRoute stopAndRoute &&
+                          stopAndRoute.routeId().equals(getRoute(environment).getId())
                         )
                       )
                   )
-                  .collect(Collectors.toList())
+                  .toList()
               );
               getSource(environment)
                 .getStops()
@@ -114,14 +112,12 @@ public class LegacyGraphQLPatternImpl implements LegacyGraphQLDataFetchers.Legac
                         .stream()
                         .anyMatch(entity ->
                           (
-                            entity instanceof EntitySelector.StopAndTrip &&
-                            ((EntitySelector.StopAndTrip) entity).stopAndTrip.routeOrTrip.equals(
-                                getSource(environment).getId()
-                              )
+                            entity instanceof EntitySelector.StopAndTrip stopAndTrip &&
+                            stopAndTrip.tripId().equals(getSource(environment).getId())
                           )
                         )
                     )
-                    .collect(Collectors.toList())
+                    .toList()
                 )
               );
               break;
